# TMD

./: .gitignore  CMakeLists.template  CMakeLists.txt  README.md  build
lib/: build_boost.sh
script/: autodock_mol2_to_pdbqt.py  chimera_addh.py  generate_conf.py  prepare_mol2.py  prepare_tmd.py  rdkit_generate_conformations.py  run_chimera_addh.sh  run_rdkit_generate_conformations.sh
src/: TMDConfig.cmake.template  TMDConfig.h  TMDConfig.h.in  angle.h  atom.h  atom_constant.h  born_radius.h  common.h  conformer.h  context.h  grid.h  main.cpp  mat3x3.h  matrix.h  mol2.h  mol2_reader.h  molecule.h  pdbqt.h  pocket.h  print.h  process.h  progress_bar.h  quaternion.h  random.h  rl_score.h  rl_score_new_born.h  sampling.h  score.cpp  score.h  str.h  term.h  tmd_reader.h  u_now.list  u_now_RL.list  u_now_VI.list  vec3d.cpp  vec3d.h  yw_score.h
src/recycled/: block.h  file.h  io.cpp  io.h  mol2.cpp  mol2.h  molecule.h  pdb.cpp  pdb.h  progress_bar.h  rl_find_pocket.h  rlpocket.cpp  score.cpp  score.h  statistics.h  tee.h  yw_score_atom_type_converter.cpp
src/res/: u_new_6A.list  u_new_6A_reduced.list  u_new_8A.list  u_now.list  u_now_RL.list  u_now_VI.list
test/: test.sh
test/example/: generate_vina_conf.py  mol2_to_pdbqt.py
test/example/1AJU_ARG_1/: 1AJU_ARG_1_lig_wH.mol2  1AJU_ARG_1_lig_wH.pdbqt  1AJU_ARG_1_lig_wH.tmd  1AJU_ARG_1_lig_wH_out.pdbqt  1AJU_ARG_1_rec_wH.mol2  1AJU_ARG_1_tmd.conf
test/sybyl_pdbqt/: 1NEM_BDR_1_lig_wH.tmd  1NEM_ligand_A-27-BDG-A-28-NEB-A-29-BDR-A-30-IDG.pdbqt  1NEM_receptor.mol2  1f27_0.mol2  transformed_ligand.pdbqt  transformed_ligand_1.pdbqt  transformed_ligand_before_last.pdbqt  transformed_ligand_last.pdbqt  transformed_ligand_middle.pdbqt
